--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ typing <code>help</code> when you start up Pssh inside tmux/screen.</p>
     -h, --help            Display this help.
 </code></pre>
 
-<p>There's also support for HTTP basic authentication when combined with <a href="https://getportly.com">Portly</a>.</p>
+<p>There's also support for HTTP basic authentication when combined with <a href="https://portly.co">Portly</a>.</p>
 
 <p>Install Portly in seconds, add <code>localhost:8022</code> to your connections, and you can
 add authentication and share a classy URL right there on the spot.</p>
